gcc/testsuite/rust/rustc/ui/rfcs/rfc-2627-raw-dylib/unsupported-abi.rs
//@ only-x86_64
//@ only-windows
//@ compile-flags: --crate-type lib --emit link
#[link(name = "foo", kind = "raw-dylib")]
extern "stdcall" {
    fn f(x: i32);
// { dg-error "" "" { target *-*-* } .-1 }
}

pub fn lib_main() {
    unsafe { f(42); }
}

